--- a/css/.gitignore
+++ b/css/.gitignore
@@ -395,4 +395,9 @@ FodyWeavers.xsd
 # JetBrains Rider
 *.sln.iml
 # file
-*all
+*index.html
+*loginform.html
+*memo.html
+*şarkı.html
+*gitignore
+*README.md
